rust/lightos/bindings/raw_lightos_bindings.rs

extern "C" {
    pub fn pop_kerror(frame: *mut kerror_frame_t) -> kerror_t;
}
extern "C" {
    pub fn drain_kerrors();
}
pub const _ANIVA_STATUS_ANIVA_FAIL: _ANIVA_STATUS = 0;
pub const _ANIVA_STATUS_ANIVA_WARNING: _ANIVA_STATUS = 1;
pub const _ANIVA_STATUS_ANIVA_SUCCESS: _ANIVA_STATUS = 2;
pub const _ANIVA_STATUS_ANIVA_NOMEM: _ANIVA_STATUS = 3;
pub const _ANIVA_STATUS_ANIVA_NODEV: _ANIVA_STATUS = 4;
pub const _ANIVA_STATUS_ANIVA_NOCONN: _ANIVA_STATUS = 5;
pub const _ANIVA_STATUS_ANIVA_FULL: _ANIVA_STATUS = 6;
pub const _ANIVA_STATUS_ANIVA_EMPTY: _ANIVA_STATUS = 7;
pub const _ANIVA_STATUS_ANIVA_BUSY: _ANIVA_STATUS = 8;
pub const _ANIVA_STATUS_ANIVA_INVAL: _ANIVA_STATUS = 9;
pub type _ANIVA_STATUS = ::std::os::raw::c_uint;
pub use self::_ANIVA_STATUS as ANIVA_STATUS;
extern "C" {
    pub fn __kernel_panic() -> !;
}
extern "C" {
    pub fn kernel_panic(panic_message: *const ::std::os::raw::c_char) -> !;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct oss_obj {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct oss_node {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct drv_manifest {
    _unused: [u8; 0],
}
pub type dev_type_t = u8;
pub const dev_flags_STANDARD: dev_flags = 1;
pub const dev_flags_FROM_FILE: dev_flags = 2;
pub const dev_flags_LOADED_WITH_WARNING: dev_flags = 4;
pub type dev_flags = ::std::os::raw::c_uint;
pub use self::dev_flags as DEV_FLAGS;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct dev_constraint {
    pub max_active: u32,
    pub current_active: u32,
    pub max_count: u32,
    pub current_count: u32,
    pub type_: dev_type_t,
    pub res0: u8,
    pub res1: u16,
    pub res2: u32,
    pub active: *mut drv_manifest,
    pub core: *mut drv_manifest,
}
#[test]
fn bindgen_test_layout_dev_constraint() {
    const UNINIT: ::std::mem::MaybeUninit<dev_constraint> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<dev_constraint>(),
        40usize,
        concat!("Size of: ", stringify!(dev_constraint))
    );
    assert_eq!(
        ::std::mem::align_of::<dev_constraint>(),
        8usize,
        concat!("Alignment of ", stringify!(dev_constraint))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).max_active) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(dev_constraint),
            "::",
            stringify!(max_active)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).current_active) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(dev_constraint),
            "::",
            stringify!(current_active)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).max_count) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(dev_constraint),
            "::",
            stringify!(max_count)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).current_count) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(dev_constraint),
            "::",
            stringify!(current_count)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).type_) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(dev_constraint),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).res0) as usize - ptr as usize },
        17usize,
        concat!(
            "Offset of field: ",
            stringify!(dev_constraint),
            "::",
            stringify!(res0)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).res1) as usize - ptr as usize },
        18usize,
        concat!(
            "Offset of field: ",
            stringify!(dev_constraint),
            "::",
            stringify!(res1)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).res2) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(dev_constraint),
            "::",
            stringify!(res2)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).active) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(dev_constraint),
            "::",
            stringify!(active)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).core) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(dev_constraint),
            "::",
            stringify!(core)
        )
    );
}
pub type dev_constraint_t = dev_constraint;
extern "C" {
    pub static mut dev_type_urls: [*const ::std::os::raw::c_char; 9usize];
}
pub type dev_url_t = *const ::std::os::raw::c_char;
pub type driver_control_code_t = u32;
pub type dcc_t = driver_control_code_t;
extern "C" {
    pub fn init_aniva_driver_registry();
}
extern "C" {
    pub fn init_driver_subsys();
}
extern "C" {
    pub fn allocate_dmanifest() -> *mut drv_manifest;
}
extern "C" {
    pub fn free_dmanifest(manifest: *mut drv_manifest);
}
extern "C" {
    pub fn install_driver(driver: *mut drv_manifest) -> kerror_t;
}
extern "C" {
    pub fn uninstall_driver(handle: *mut drv_manifest) -> kerror_t;
}
extern "C" {
    pub fn load_driver(manifest: *mut drv_manifest) -> kerror_t;
}
extern "C" {
    pub fn unload_driver(url: dev_url_t) -> kerror_t;
}
extern "C" {
    pub fn is_driver_installed(handle: *mut drv_manifest) -> bool_;
}
extern "C" {
    pub fn is_driver_loaded(handle: *mut drv_manifest) -> bool_;
}
extern "C" {
    pub fn get_driver(url: dev_url_t) -> *mut drv_manifest;
}
extern "C" {
    pub fn get_main_driver_from_type(type_: dev_type_t) -> *mut drv_manifest;
}
extern "C" {
    pub fn get_driver_from_type(type_: dev_type_t, index: u32) -> *mut drv_manifest;
}
extern "C" {
    pub fn get_core_driver(type_: dev_type_t) -> *mut drv_manifest;
}
extern "C" {
    pub fn get_main_driver_path(
        buffer: *mut ::std::os::raw::c_char,
        type_: dev_type_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn get_driver_type_count(type_: dev_type_t) -> usize;
}
extern "C" {
    pub fn foreach_driver(
        callback: ::std::option::Option<
            unsafe extern "C" fn(
                h: *mut oss_node,
                obj: *mut oss_obj,
                arg: *mut ::std::os::raw::c_void,
            ) -> bool_,
        >,
        arg: *mut ::std::os::raw::c_void,
    ) -> kerror_t;
}
extern "C" {
    pub fn set_main_driver(dev: *mut drv_manifest, type_: dev_type_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn verify_driver(manifest: *mut drv_manifest) -> bool_;
}
extern "C" {
    pub fn replace_main_driver(manifest: *mut drv_manifest, uninstall: bool_);
}
extern "C" {
    pub fn register_core_driver(
        driver: *mut aniva_driver,
        type_: dev_type_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn unregister_core_driver(driver: *mut aniva_driver) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn try_driver_get(driver: *mut aniva_driver, flags: u32) -> *mut drv_manifest;
}
extern "C" {
    pub fn driver_set_ready(path: *const ::std::os::raw::c_char) -> kerror_t;
}
extern "C" {
    pub fn driver_get_type_str(driver: *mut drv_manifest) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn driver_send_msg(
        path: *const ::std::os::raw::c_char,
        code: driver_control_code_t,
        buffer: *mut ::std::os::raw::c_void,
        buffer_size: usize,
    ) -> kerror_t;
}
extern "C" {
    pub fn driver_send_msg_a(
        path: *const ::std::os::raw::c_char,
        code: driver_control_code_t,
        buffer: *mut ::std::os::raw::c_void,
        buffer_size: usize,
        resp_buffer: *mut ::std::os::raw::c_void,
        resp_buffer_size: usize,
    ) -> kerror_t;
}
extern "C" {
    pub fn driver_send_msg_ex(
        driver: *mut drv_manifest,
        code: driver_control_code_t,
        buffer: *mut ::std::os::raw::c_void,
        buffer_size: usize,
        resp_buffer: *mut ::std::os::raw::c_void,
        resp_buffer_size: usize,
    ) -> kerror_t;
}
extern "C" {
    pub fn driver_send_msg_sync(
        path: *const ::std::os::raw::c_char,
        code: driver_control_code_t,
        buffer: *mut ::std::os::raw::c_void,
        buffer_size: usize,
    ) -> kerror_t;
}
extern "C" {
    pub fn driver_map(
        driver: *mut drv_manifest,
        base: *mut ::std::os::raw::c_void,
        size: usize,
        page_flags: u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn driver_unmap(
        driver: *mut drv_manifest,
        base: *mut ::std::os::raw::c_void,
        size: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn driver_allocate(
        driver: *mut drv_manifest,
        size: usize,
        page_flags: u32,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn driver_deallocate(
        driver: *mut drv_manifest,
        base: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn driver_kmalloc(driver: *mut drv_manifest, size: usize) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn driver_kfree(
        driver: *mut drv_manifest,
        arg1: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn driver_send_msg_sync_with_timeout(
        path: *const ::std::os::raw::c_char,
        code: driver_control_code_t,
        buffer: *mut ::std::os::raw::c_void,
        buffer_size: usize,
        mto: usize,
    ) -> kerror_t;
}
extern "C" {
    pub fn get_driver_url(handle: *mut aniva_driver) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn get_driver_url_length(handle: *mut aniva_driver) -> usize;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct device {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct dgroup {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union driver_version {
    pub __bindgen_anon_1: driver_version__bindgen_ty_1,
    pub version: u32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct driver_version__bindgen_ty_1 {
    pub maj: u8,
    pub min: u8,
    pub bump: u16,
}
#[test]
fn bindgen_test_layout_driver_version__bindgen_ty_1() {
    const UNINIT: ::std::mem::MaybeUninit<driver_version__bindgen_ty_1> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<driver_version__bindgen_ty_1>(),
        4usize,
        concat!("Size of: ", stringify!(driver_version__bindgen_ty_1))
    );
    assert_eq!(
        ::std::mem::align_of::<driver_version__bindgen_ty_1>(),
        2usize,
        concat!("Alignment of ", stringify!(driver_version__bindgen_ty_1))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).maj) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(driver_version__bindgen_ty_1),
            "::",
            stringify!(maj)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).min) as usize - ptr as usize },
        1usize,
        concat!(
            "Offset of field: ",
            stringify!(driver_version__bindgen_ty_1),
            "::",
            stringify!(min)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).bump) as usize - ptr as usize },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(driver_version__bindgen_ty_1),
            "::",
            stringify!(bump)
        )
    );
}
